// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tree:DecisionTreeClassifier Should not fit if invalid data is given 1`] = `
Object {
  "message": "validateFitInputs received a non-array input X",
  "name": "",
}
`;

exports[`tree:DecisionTreeClassifier Should not fit if invalid data is given 2`] = `
Object {
  "message": "validateFitInputs received a non-array input X",
  "name": "",
}
`;

exports[`tree:DecisionTreeClassifier Should not fit if invalid data is given 3`] = `
Object {
  "message": "validateFitInputs received a non-array input X",
  "name": "",
}
`;

exports[`tree:DecisionTreeClassifier Should not fit if invalid data is given 4`] = `[TypeError: Cannot read property 'buildTree' of undefined]`;

exports[`tree:DecisionTreeClassifier Should not fit if invalid data is given 5`] = `
Object {
  "message": "validateFitInputs received a non-array input X",
  "name": "",
}
`;

exports[`tree:DecisionTreeClassifier should not predict if invalid data is given 1`] = `
Object {
  "message": "validateMatrix2D has received a non-array argument",
  "name": "",
}
`;

exports[`tree:DecisionTreeClassifier should not predict if invalid data is given 2`] = `
Object {
  "message": "validateMatrix2D has received a non-array argument",
  "name": "",
}
`;

exports[`tree:DecisionTreeClassifier should not predict if invalid data is given 3`] = `
Object {
  "message": "validateMatrix2D has received a non-array argument",
  "name": "",
}
`;

exports[`tree:DecisionTreeClassifier should not predict if invalid data is given 4`] = `
Object {
  "message": "The matrix is not 2D shaped: [] of [0]",
  "name": "",
}
`;

exports[`tree:DecisionTreeClassifier should not predict if invalid data is given 5`] = `
Object {
  "message": "validateMatrix2D has received a non-array argument",
  "name": "",
}
`;

exports[`tree:DecisionTreeClassifier should return a correct class counts for fruitY 1`] = `
Object {
  "Apple": Object {
    "count": 1,
    "value": "Apple",
  },
  "Grape": Object {
    "count": 1,
    "value": "Grape",
  },
  "Lemon": Object {
    "count": 1,
    "value": "Lemon",
  },
}
`;

exports[`tree:DecisionTreeClassifier should use fruitX and print a correct tree 1`] = `""`;
